[gd_scene load_steps=5 format=2]

[ext_resource path="res://areas/drop_area/drop_area.gd" type="Script" id=1]
[ext_resource path="res://textures.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 700, 604.904 )

[sub_resource type="Animation" id=2]
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/Sprite2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0955854, 0.3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/Sprite2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, 0.5 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 3.5, 3.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D/Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 3.7, 3.7 ), Vector2( 3.6, 3.6 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D/Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.00125599 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node2D/Sprite2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.00152442 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="DropArea" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputArea" type="Area2D" parent="."]
position = Vector2( 0, 347 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InputArea"]
position = Vector2( 0, 104 )
shape = SubResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, 575 )

[node name="Sprite" type="Sprite" parent="Node2D"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -38 )
scale = Vector2( 3.7, 3.7 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 753, 221, 362, 328 )

[node name="Sprite2" type="Sprite" parent="Node2D"]
visible = false
modulate = Color( 1, 1, 1, 0.000932799 )
position = Vector2( 0, -38 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 391, 225, 358, 321 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/enter = SubResource( 2 )

[connection signal="input_event" from="InputArea" to="." method="_on_InputArea_input_event"]
[connection signal="mouse_entered" from="InputArea" to="." method="_on_InputArea_mouse_entered"]
[connection signal="mouse_exited" from="InputArea" to="." method="_on_InputArea_mouse_exited"]
